package rec.gui;

import "rec/gui/proto/Button.proto";
import "rec/gui/proto/ComboBox.proto";
import "rec/gui/proto/Label.proto";
import "rec/gui/proto/Resizer.proto";
import "rec/gui/proto/Slider.proto";
import "rec/gui/proto/ToggleButton.proto";

message ComponentProto {
  optional string name = 1;
  optional string preferred = 2;
  optional string min = 3;
  optional string max = 4;

  optional ButtonProto button = 5;
  optional ComboBoxProto combo_box = 6;
  optional LabelProto label = 7;
  // optional PanelProto panel = 8;
  optional ResizerProto resizer = 9;
  optional SliderProto slider = 10;
  optional ToggleButtonProto toggle_button = 11;
};

message ComponentProtos {
  repeated ComponentProto component = 1;
};